Feat: 更新 SCSS 網頁字體設定

--- a/scss/_variable.scss
+++ b/scss/_variable.scss
@@ -1,5 +1,12 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400&family=Noto+Sans+TC:wght@300&display=swap");
+
+// Colors
 $c_light: #ffffff;
 $c_dark: #000000;
 $c_main: #415165;
 $c_sub: #96a9c4;
 $c_stress: #a00404;
+
+// Fonts
+$f_tw: "Roboto";
+$f_en: "Noto Sans TC";
