--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -32,18 +32,6 @@ body {
   margin: 3rem auto;
   padding: 0 1rem;
 }
-.name {
-  font-size: 3.5rem;
-  line-height: 2.5rem;
-  padding: 1rem 0;
-  border-bottom: 2px solid $c_dark;
-}
-.portrait {
-  width: 300px;
-  max-width: 100%;
-  border-radius: 50%;
-  margin-top: 2rem;
-}
 .title {
   font-size: 1.33rem;
   line-height: 1.25rem;
@@ -70,6 +58,24 @@ body {
   }
 }
 
+.name {
+  font-size: 3.5rem;
+  line-height: 2.5rem;
+  padding: 1rem 0;
+  border-bottom: 2px solid $c_dark;
+}
+.portrait {
+  width: 300px;
+  max-width: 100%;
+  border-radius: 50%;
+  margin-top: 2rem;
+
+  @include mobile {
+    display: block;
+    margin: 2rem auto 0;
+  }
+}
+
 .profile {
   margin-left: 2rem;
   padding: 0.66rem 0;
@@ -83,5 +89,16 @@ body {
       top: 25px;
       left: -32px;
     }
+  }
+}
+
+.portfolio {
+  background-color: $c_sub;
+  margin: 3rem 0;
+  padding: 1.5rem 1rem;
+
+  .title {
+    max-width: 1200px;
+    margin: 0 auto;
   }
 }
