--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -102,3 +102,29 @@ body {
     margin: 0 auto;
   }
 }
+
+.eduction {
+  margin-left: 2rem;
+  position: relative;
+
+  &_item {
+    padding: 0.66rem 0;
+    position: relative;
+    &::before {
+      @include fakeDot {
+        top: 25px;
+        left: -32px;
+      }
+    }
+  }
+  &::before {
+    content: "";
+    display: block;
+    width: 2px;
+    height: 66px;
+    background-color: $c_sub;
+    position: absolute;
+    top: 30px;
+    left: -25px;
+  }
+}
