--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -34,6 +34,7 @@ body {
 }
 .title {
   font-size: 1.33rem;
+  font-weight: bold;
   line-height: 1.25rem;
   padding: 0.33rem 0;
 
@@ -138,7 +139,7 @@ body {
 
   &_container {
     background-color: $c_main;
-    max-width: 1200px;
+    max-width: 1200px - 48px;
     margin: 0 auto;
     padding: 1rem;
     display: flex;
@@ -149,7 +150,7 @@ body {
       width: 80vw;
     }
     @include mobile() {
-      width: 90vw;
+      width: 85vw;
     }
   }
   &_content {
@@ -167,5 +168,16 @@ body {
     top: 15%;
     left: 0;
     z-index: -1;
+  }
+}
+
+.work {
+  margin: 1rem 0 0 1rem;
+  padding-left: 1rem;
+  border-left: 1px solid $c_sub;
+
+  &_item {
+    padding: 0.66rem 0;
+    font-weight: bold;
   }
 }
