--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -147,10 +147,10 @@ body {
     align-items: center;
 
     @include pad {
-      width: 80vw;
+      width: 80%;
     }
     @include mobile() {
-      width: 85vw;
+      width: 85%;
     }
   }
   &_content {
@@ -163,7 +163,7 @@ body {
     content: "";
     background-color: $c_sub;
     position: absolute;
-    width: 100vw;
+    width: 100%;
     height: 70%;
     top: 15%;
     left: 0;
@@ -190,5 +190,23 @@ body {
     max-width: 1200px - 48px;
     margin: 0 auto;
     padding: 1rem;
+  }
+  &_content {
+    width: 50%;
+    margin: 1rem auto;
+    display: flex;
+    justify-content: space-around;
+
+    &_item {
+      color: $c_light;
+      font-size: 2rem;
+      padding: 0.5rem;
+      border-radius: 5px;
+
+      &:hover {
+        background-color: $c_sub;
+        transition: 0.5s;
+      }
+    }
   }
 }
